fix size in icon too small in mobile

--- a/portfolio-end/style.css
+++ b/portfolio-end/style.css
@@ -317,4 +317,15 @@ footer nav {
   justify-content: space-between;
 }
 
+@media only screen and (max-width: 768px) {
+  footer nav {
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+  }
+
+  footer {
+    padding: 4rem 1rem;
+  }
+}
 /* Footer End */
